started form section, added .wrapper class to fix fullbleed wallpaper on form

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,8 @@ html body {
   line-height: 1.5;
   color: #fff;
   background-color: #08022d;
+}
+html body .wrapper {
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -344,6 +346,10 @@ p {
   text-transform: uppercase;
   width: 60%;
 }
+.section-join-us .form-label {
+  font-size: 1.8rem;
+  font-weight: 400;
+}
 
 .u-margin-bottom-small {
   margin-bottom: 1rem !important;
@@ -582,4 +588,20 @@ p {
   -webkit-box-shadow: inset 0px -3rem 3rem black;
           box-shadow: inset 0px -3rem 3rem black;
   border-bottom: 0.5rem solid #ffd600;
+}
+
+.section-join-us {
+  background-image: url(../../../img/image7.jpg);
+  background-size: cover;
+  padding: 10rem;
+}
+.section-join-us .form {
+  width: 66%;
+}
+.section-join-us .form-label {
+  display: block;
+  width: 45%;
+}
+.section-join-us .form-input {
+  width: 45%;
 }
