--- a/styles/sass/base/_typography.scss
+++ b/styles/sass/base/_typography.scss
@@ -61,4 +61,11 @@ p {
             }
         }
     }
+
+    &-join-us {
+        .form-label {
+            font-size: $font-size-main;
+            font-weight: 400;
+        }
+    }
 }
